--- a/index.html
+++ b/index.html
@@ -12,7 +12,22 @@
         }
 
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+            font-family:
+                -apple-system,
+                BlinkMacSystemFont,
+                'Segoe UI',
+                Roboto,
+                'Helvetica Neue',
+                Arial,
+                'Plangothic P1',
+                'Plangothic P2',
+                '遍黑体P1',
+                '遍黑体P2',
+                'TH-Tshyn-P0',
+                'TH-Sy-P0',
+                'TH-Sy-P16',
+                'TH-Feon',
+                sans-serif;
             padding: 20px;
             max-width: 1200px;
             margin: 0 auto;
