--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
                  'Segoe UI',
                  Roboto,
                  'Helvetica Neue',
-                 Arial,,
-                 sans-serif
-             'Plangothic P1',
-             'Plangothic P2',
-             '遍黑体P1',
-             '遍黑体P2',
-             'TH-Tshyn-P0',
-             'TH-Sy-P0',
-             'TH-Sy-P16',
-             'TH-Feon';
+                 Arial,
+                 sans-serif,
+                 'Plangothic P1',
+                 'Plangothic P2',
+                 '遍黑体P1',
+                 '遍黑体P2',
+                 'TH-Tshyn-P0',
+                 'TH-Sy-P0',
+                 'TH-Sy-P16',
+                 'TH-Feon';
              padding: 20px;
              max-width: 1200px;
              margin: 0 auto;
